// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize with relationships with empty relationships ignores the relationship 1`] = `
Object {
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with relationships with valid relationships with a 1:1 relationship with a local id deserializes the json 1`] = `
Object {
  "company": Object {
    "lid": "666",
  },
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with relationships with valid relationships with a 1:1 relationship with a normal id deserializes the json 1`] = `
Object {
  "company": Object {
    "id": "666",
  },
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with relationships with valid relationships with a 1:n relationship with a local id deserializes the json 1`] = `
Object {
  "companies": Array [
    Object {
      "lid": "666",
    },
    Object {
      "id": "667",
    },
  ],
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with relationships with valid relationships with a 1:n relationship with a local id deserializes the json 2`] = `
Object {
  "companies": Array [
    Object {
      "city": "Düsseldorf",
      "lid": "666",
      "name": "Compeon GmbH",
    },
    Object {
      "city": "Düsseldorf",
      "id": "667",
      "name": "Compeong 4.0 GmbH",
    },
  ],
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with relationships with valid relationships with a 1:n relationship with a normal id deserializes the json 1`] = `
Object {
  "companies": Array [
    Object {
      "id": "666",
    },
    Object {
      "id": "667",
    },
  ],
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with relationships with valid relationships with a 1:n relationship with a normal id deserializes the json 2`] = `
Object {
  "companies": Array [
    Object {
      "city": "Düsseldorf",
      "id": "666",
      "name": "Compeon GmbH",
    },
    Object {
      "city": "Düsseldorf",
      "id": "667",
      "name": "Compeong 4.0 GmbH",
    },
  ],
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with relationships with valid relationships with includes with a 1:1 relationship with a local id deserializes the json 1`] = `
Object {
  "company": Object {
    "city": "Düsseldorf",
    "lid": "666",
    "name": "Compeon GmbH",
  },
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with relationships with valid relationships with includes with a 1:1 relationship with a normal id deserializes the json 1`] = `
Object {
  "company": Object {
    "city": "Düsseldorf",
    "id": "666",
    "name": "Compeong GmbH",
  },
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with simple attributes with invalid attributes when data does not exist deserializes the json 1`] = `Object {}`;

exports[`deserialize with simple attributes with invalid attributes when data is empty deserializes the json 1`] = `Object {}`;

exports[`deserialize with simple attributes with valid attributes deserializes the json 1`] = `
Object {
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;
